Fix spacing with two cards. Fix text on read button

--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ body {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 75px;
 }
 
